# user-management

./: .gitignore
.github/workflows/: ci-release.yml
ci/: install.sh  int_test.sh  lint.sh  test.sh
e2e-tests/: conftest.py  request_helper.py
e2e-tests/lib/: auth_utils.py
e2e-tests/routes/: test_post_confirm_forgot_password.py  test_post_confirm_signup.py  test_post_forgot_password.py  test_post_signup.py
integration_tests/: conftest.py
integration_tests/routes/: test_post_confirm_forgot_password.py  test_post_resend_confirmation_code.py
lambdas/: Dockerfile  local.py  pyproject.toml
lambdas/src/: api.py
lambdas/src/add_user_to_group/: handler.py
lambdas/src/customize_emails_trigger/: handler.py
lambdas/src/lib/: aws_resources.py  response.py
lambdas/src/routes/: hello.py  post_confirm_forgot_password.py  post_confirm_signup.py  post_forgot_password.py  post_logout.py  post_refresh_signin.py  post_resend_confirmation_code.py  post_signin.py  post_signup.py
lambdas/tests/: conftest.py  support.py  test_add_user_to_group.py  test_customize_emails_trigger.py  test_hello.py  test_post_confirm_forgot_password.py  test_post_confirm_signup.py  test_post_confirmation_trigger.py  test_post_forgot_password.py  test_post_logout.py  test_post_refresh_signin.py  test_post_resend_confirmation_code.py  test_post_signin.py  test_post_signup.py
scripts/: ensure-up-to-date.sh
terraform/: acm.tf  apigateway.tf  cloudwatch.tf  cognito.tf  ecr.tf  iam.tf  lambda.tf  route53.tf  variables.tf
